Closed
Bug 420409
Opened 18 years ago
Closed 18 years ago
Need to be able to print backtraces
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
mozilla1.9beta4
People
(Reporter: taras.mozilla, Assigned: taras.mozilla)
Details
(Keywords: regression)
Attachments
(1 file, 1 obsolete file)
|
830 bytes,
patch
|
mrbkap
:
review+
mconnor
:
approval1.9b4+
|
Details | Diff | Splinter Review |
The patch in bug 350650 caused the exception to be cleared before js_ReportErrorAgain calls the user-defined error handler.
Is there an alternative way of getting an error backtrace?
| Assignee | ||
Comment 1•18 years ago
|
||
Comment 2•18 years ago
|
||
Comment on attachment 306647 [details] [diff] [review]
Keep exn object around for the callback
This seems fine to me, only a couple of nits.
>Index: jsexn.c
> /* Flag the error as an exception. */
> reportp->flags |= JSREPORT_EXCEPTION;
>+ /* Pass the exception object */
Add a blank line between the line and the error. Also, end the sentence with a period.
Comment 3•18 years ago
|
||
Blake, can you pick nits, get approval, and land? Need to fix this regression for 1.9/fx3.
/be
Comment 4•18 years ago
|
||
I don't know which release this should track, trying b4 first, though I don't think it would be too terrible for this to go in after the freeze.
Attachment #306647 -
Attachment is obsolete: true
Attachment #306786 -
Flags: review+
Attachment #306786 -
Flags: approval1.9b4?
Comment 5•18 years ago
|
||
Comment on attachment 306786 [details] [diff] [review]
Updated to my nits
a=mconnor on behalf of drivers
Attachment #306786 -
Flags: approval1.9b4? → approval1.9b4+
Updated•18 years ago
|
Assignee: mrbkap → tglek
Comment 6•18 years ago
|
||
Fix checked in. Thanks for the patch, Taras!
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9beta4
Updated•18 years ago
|
Flags: in-testsuite-
Flags: in-litmus-
You need to log in
before you can comment on or make changes to this bug.
Description
•