Stick exn back into the context so that js_ReportErrorAgain callees can access the exception. bug 420409, patch from taras, r=mrbkap a=mconnor